--- a/99/index.html
+++ b/99/index.html
@@ -84,6 +84,7 @@ class Game extends Phaser.Scene {
     }
 
     create() {
+        this.phase = 0
         this.isDone = false
         this.cameras.main.setBackgroundColor(0xffffff)
         
@@ -103,20 +104,6 @@ class Game extends Phaser.Scene {
         this.car = this.add.sprite(0, 0, 'atlas', 'green.png').setScale(0.5)
 
         this.scene1.addMultiple([this.logo,this.textGame,this.blackCar,this.car])
-
-        this.carTween = this.tweens.add({targets: this.car, y: window.innerHeight*0.4, duration: 1200, delay:500, repeat:-1, yoyo:true, ease: 'sine.inOut', 
-            onUpdate: ()=>{
-                if(this.car.y < window.innerHeight*0.5){
-                    if(this.car.frame.name != 'grey.png'){
-                        this.car.setFrame('grey.png')
-                    }
-                }
-                else if(this.car.y > window.innerHeight*0.55){
-                    if(this.car.frame.name != 'green.png'){
-                        this.car.setFrame('green.png')
-                    }
-                }   
-        }}); 
 
         this.tapInput = this.input.on('pointerdown', this.checkMatch, this)
         //this.tweens.add({targets: this.bellaCharacter2, alpha: 1, duration: 650, delay:250, ease: 'sine.inOut', onComplete:() => {this.vsTween.play()}});
@@ -138,72 +125,15 @@ class Game extends Phaser.Scene {
     }
 
     setCTA(){
-         this.textCTA = this.add.sprite(0, 0, 'atlas', 'textCTA.png').setScale(0.5)
-         this.logoCTA = this.add.sprite(0, 0, 'atlas', '99.png').setScale(0.5)
-         this.text2CTA = this.add.sprite(0, 0, 'atlas', 'textCTA2.png').setScale(0.5)
+         this.textCTA = this.add.sprite(0, 0, 'atlas', 'textCTA.png')
+         this.logoCTA = this.add.sprite(0, 0, 'atlas', '99.png')
+         this.text2CTA = this.add.sprite(0, 0, 'atlas', 'textCTA2.png')
          this.buttonCTA = this.add.sprite(0, 0, 'atlas', 'buttonCTA.png').setScale(0)
          this.storesCTA = this.add.sprite(0, 0, 'atlas', 'stores.png').setScale(0)
-
-         this.ctaTween = this.tweens.chain({
-            tweens: [
-                {
-                    targets: this.textCTA,
-                    x: window.innerWidth*0.45,
-                    duration: 200,
-                    ease: 'Quart.out'
-                },
-                 {
-                    targets: this.textCTA,
-                    x: window.innerWidth*0.5,
-                    duration: 100,
-                    ease: 'Sine.inOut'
-                },
-                {
-                    targets: this.logoCTA,
-                    x: window.innerWidth*0.45,
-                    duration: 200,
-                    ease: 'Quart.out'
-                },
-                 {
-                    targets: this.logoCTA,
-                    x: window.innerWidth*0.5,
-                    duration: 100,
-                    ease: 'Sine.inOut'
-                },
-                {
-                    targets: this.text2CTA,
-                    x: window.innerWidth*0.45,
-                    duration: 200,
-                    ease: 'Quart.out'
-                },
-                 {
-                    targets: this.text2CTA,
-                    x: window.innerWidth*0.5,
-                    duration: 100,
-                    ease: 'Sine.inOut'
-                },
-                 {
-                    targets: this.buttonCTA,
-                    scale: 0.5,
-                    duration: 200,
-                    ease: 'Sine.inOut'
-                },
-                 {
-                    targets: this.storesCTA,
-                    scale: 0.5,
-                    duration: 200,
-                    ease: 'Sine.inOut'
-                }
-            ],
-            paused:true,
-            delay:500,
-            onComplete:()=>{
-                this.tweens.add({targets: this.buttonCTA, scale: {value: this.buttonCTA.scaleX+0.1}, duration: 1000,  ease: 'sine.inOut', yoyo:true, loop:-1}); 
-            }
-        });
     }
   
     startCTA(){
+        this.phase = 3
         this.cameras.main.fadeOut(300, 255, 220, 4)
         
         this.cameras.main.on('camerafadeoutcomplete', function () {
@@ -220,36 +150,198 @@ class Game extends Phaser.Scene {
     resize (gameSize, baseSize, displaySize, resolution){
         const width = gameSize.width;
         const height = gameSize.height;
+        var isLandscape = height / width  < 1.3 ? true: false;
 
         //this.scaleSprite(this.logo,window.innerWidth,window.innerHeight/3, 0.5)
         //GAME
-        this.logo.x = width*0.5
-        this.logo.y = height*0.15
+        if(!isLandscape){
+            this.logo.setScale(0.5)
+            this.logo.x = width*0.5
+            this.logo.y = height*0.15
 
-        this.textGame.x = width*0.5
-        this.textGame.y = height*0.3
+            this.textGame.setScale(0.5)
+            this.textGame.x = width*0.5
+            this.textGame.y = height*0.3
 
-        this.blackCar.x = width*0.5
-        this.blackCar.y = height*0.6
+            this.blackCar.setScale(0.5)
+            this.blackCar.x = width*0.5
+            this.blackCar.y = height*0.6
 
-        this.car.x = width*0.5
-        this.car.y = height*0.83
+            this.car.setScale(0.5)
+            this.car.x = width*0.5
+            this.car.y = height*0.83
 
-        ///CTA
-        this.textCTA.x = width*2
-        this.textCTA.y = height*0.22
+            ///CTA
+            this.textCTA.setScale(0.5)
+            this.textCTA.x = width*2
+            this.textCTA.y = height*0.22
 
-        this.logoCTA.x = width*2
-        this.logoCTA.y = height*0.36
+            this.logoCTA.setScale(0.5)
+            this.logoCTA.x = width*2
+            this.logoCTA.y = height*0.36
 
-        this.text2CTA.x = width*2
-        this.text2CTA.y = height*0.54
+            this.text2CTA.setScale(0.5)
+            this.text2CTA.x = width*2
+            this.text2CTA.y = height*0.54
 
-        this.buttonCTA.x = width*0.5
-        this.buttonCTA.y = height*0.68
+            this.buttonCTA.x = width*0.5
+            this.buttonCTA.y = height*0.68
 
-        this.storesCTA.x = width*0.5
-        this.storesCTA.y = height*0.8
+            this.storesCTA.x = width*0.5
+            this.storesCTA.y = height*0.8
+
+            if(this.phase == 0){
+                if(this.carTween)this.carTween.remove()    
+                this.carTween = this.tweens.add({targets: this.car, y: window.innerHeight*0.4, duration: 1200, delay:500, repeat:-1, yoyo:true, ease: 'sine.inOut', 
+                    onUpdate: ()=>{
+                        if(this.car.y < window.innerHeight*0.5){
+                            if(this.car.frame.name != 'grey.png'){
+                                this.car.setFrame('grey.png')
+                            }
+                        }
+                        else if(this.car.y > window.innerHeight*0.55){
+                            if(this.car.frame.name != 'green.png'){
+                                this.car.setFrame('green.png')
+                            }
+                        }   
+                }}); 
+
+                this.ctaTween = this.tweens.chain({tweens: [{targets: this.textCTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.textCTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.logoCTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.logoCTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.text2CTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.text2CTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.buttonCTA, scale: 0.55, duration: 200, ease: 'Sine.inOut'}, {targets: this.storesCTA, scale: 0.55, duration: 200, ease: 'Sine.inOut'} ], paused:true, delay:500, onComplete:()=>{this.tweens.add({targets: this.buttonCTA, scale: {value: this.buttonCTA.scaleX+0.1}, duration: 1000,  ease: 'sine.inOut', yoyo:true, loop:-1}); } });
+            }
+            else if(this.phase == 3){
+                this.textCTA.setScale(0.5)
+                this.textCTA.x = width*0.5
+                this.textCTA.y = height*0.22
+
+                this.logoCTA.setScale(0.5)
+                this.logoCTA.x = width*0.5
+                this.logoCTA.y = height*0.36
+
+                this.text2CTA.setScale(0.5)
+                this.text2CTA.x = width*0.5
+                this.text2CTA.y = height*0.54
+
+                this.buttonCTA.x = width*0.5
+                this.buttonCTA.y = height*0.68
+
+                this.storesCTA.x = width*0.5
+                this.storesCTA.y = height*0.8
+            }
+
+            if(height <= 512){
+                this.logo.setScale(0.3)
+                this.textGame.setScale(0.4)
+                this.blackCar.setScale(0.4)
+                this.car.setScale(0.4)
+            }
+
+            if(this.sys.game.device.os && !this.sys.game.device.os.iPhone){
+                this.logo.setScale(0.8)
+                this.textGame.setScale(0.8)
+                this.blackCar.setScale(0.8)
+                this.car.setScale(0.8)
+                this.textCTA.setScale(1)
+                this.logoCTA.setScale(1)
+                this.text2CTA.setScale(1)
+                this.ctaTween = this.tweens.chain({tweens: [{targets: this.textCTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.textCTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.logoCTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.logoCTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.text2CTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.text2CTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.buttonCTA, scale: 1, duration: 200, ease: 'Sine.inOut'}, {targets: this.storesCTA, scale: 1, duration: 200, ease: 'Sine.inOut'} ], paused:true, delay:500, onComplete:()=>{this.tweens.add({targets: this.buttonCTA, scale: {value: this.buttonCTA.scaleX+0.1}, duration: 1000,  ease: 'sine.inOut', yoyo:true, loop:-1}); } });
+            }
+        }
+        else{
+            this.logo.setScale(0.6)
+            this.logo.x = width*0.3
+            this.logo.y = height*0.35
+
+            this.textGame.setScale(0.5)
+            this.textGame.x = width*0.3
+            this.textGame.y = height*0.65
+
+            this.blackCar.setScale(0.5)
+            this.blackCar.x = width*0.7
+            this.blackCar.y = height*0.5
+
+            this.car.setScale(0.5)
+            this.car.x = width*0.7
+            this.car.y = height*0.83
+
+            ///CTA
+            this.textCTA.setScale(0.5)
+            this.textCTA.x = width*2
+            this.textCTA.y = height*0.15
+
+            this.logoCTA.setScale(0.5)
+            this.logoCTA.x = width*2
+            this.logoCTA.y = height*0.36
+
+            this.text2CTA.setScale(0.5)
+            this.text2CTA.x = width*2
+            this.text2CTA.y = height*0.6
+
+            this.buttonCTA.x = width*0.5
+            this.buttonCTA.y = height*0.72
+
+            this.storesCTA.x = width*0.5
+            this.storesCTA.y = height*0.87
+
+            if(this.phase == 0){
+                if(this.carTween)this.carTween.remove()    
+                this.carTween = this.tweens.add({targets: this.car, y: window.innerHeight*0.2, duration: 1200, delay:500, repeat:-1, yoyo:true, ease: 'sine.inOut', 
+                    onUpdate: ()=>{
+                        if(this.car.y < window.innerHeight*0.5){
+                            if(this.car.frame.name != 'grey.png'){
+                                this.car.setFrame('grey.png')
+                            }
+                        }
+                        else if(this.car.y > window.innerHeight*0.55){
+                            if(this.car.frame.name != 'green.png'){
+                                this.car.setFrame('green.png')
+                            }
+                        }   
+                }}); 
+
+                this.ctaTween = this.tweens.chain({tweens: [{targets: this.textCTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.textCTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.logoCTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.logoCTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.text2CTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.text2CTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.buttonCTA, scale: 0.55, duration: 200, ease: 'Sine.inOut'}, {targets: this.storesCTA, scale: 0.55, duration: 200, ease: 'Sine.inOut'} ], paused:true, delay:500, onComplete:()=>{this.tweens.add({targets: this.buttonCTA, scale: {value: this.buttonCTA.scaleX+0.1}, duration: 1000,  ease: 'sine.inOut', yoyo:true, loop:-1}); } });
+            }
+            else if(this.phase == 3){
+                this.textCTA.setScale(0.5)
+                this.textCTA.x = width*0.5
+                this.textCTA.y = height*0.15
+
+                this.logoCTA.setScale(0.5)
+                this.logoCTA.x = width*0.5
+                this.logoCTA.y = height*0.36
+
+                this.text2CTA.setScale(0.5)
+                this.text2CTA.x = width*0.5
+                this.text2CTA.y = height*0.6
+
+                this.buttonCTA.x = width*0.5
+                this.buttonCTA.y = height*0.72
+
+                this.storesCTA.x = width*0.5
+                this.storesCTA.y = height*0.87
+            }
+
+             if(height <= 512){
+                this.logo.setScale(0.5)
+                this.textGame.setScale(0.5)
+                this.blackCar.setScale(0.4)
+                this.car.setScale(0.4)
+                this.textCTA.setScale(0.45)
+                this.logoCTA.setScale(0.45)
+                this.text2CTA.setScale(0.45)
+                this.ctaTween = this.tweens.chain({tweens: [{targets: this.textCTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.textCTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.logoCTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.logoCTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.text2CTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.text2CTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.buttonCTA, scale: 0.45, duration: 200, ease: 'Sine.inOut'}, {targets: this.storesCTA, scale: 0.5, duration: 200, ease: 'Sine.inOut'} ], paused:true, delay:500, onComplete:()=>{this.tweens.add({targets: this.buttonCTA, scale: {value: this.buttonCTA.scaleX+0.1}, duration: 1000,  ease: 'sine.inOut', yoyo:true, loop:-1}); } });
+            }
+
+            if(this.sys.game.device.os && !this.sys.game.device.os.iPhone){
+                this.logo.setScale(0.8)
+                this.textGame.setScale(0.8)
+                this.blackCar.setScale(0.8)
+                this.car.setScale(0.8)
+                this.textCTA.setScale(1)
+                this.logoCTA.setScale(1)
+                this.text2CTA.setScale(1)
+                this.ctaTween = this.tweens.chain({tweens: [{targets: this.textCTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.textCTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.logoCTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.logoCTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.text2CTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.text2CTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.buttonCTA, scale: 1, duration: 200, ease: 'Sine.inOut'}, {targets: this.storesCTA, scale: 1, duration: 200, ease: 'Sine.inOut'} ], paused:true, delay:500, onComplete:()=>{this.tweens.add({targets: this.buttonCTA, scale: {value: this.buttonCTA.scaleX+0.1}, duration: 1000,  ease: 'sine.inOut', yoyo:true, loop:-1}); } });
+            }
+        }
     }
 }
 
@@ -261,9 +353,6 @@ let config = {
        autoCenter: Phaser.Scale.CENTER_BOTH,
        width: window.innerWidth,
        height: window.innerHeight,
-    },
-    renderer: {
-        resolution: window.devicePixelRatio
     }
 }
 new Phaser.Game(config)
