--- a/ninev2/index.html
+++ b/ninev2/index.html
@@ -231,6 +231,114 @@ class Game extends Phaser.Scene {
                 this.storesCTA.x = width*0.5
                 this.storesCTA.y = height*0.8
             }
+
+
+            if(this.sys.game.device.os && !this.sys.game.device.os.iPhone){
+                this.logo.setScale(0.8)
+                this.textGame.setScale(0.8)
+                this.blackCar.setScale(0.8)
+                this.car.setScale(0.8)
+                this.textCTA.setScale(1)
+                this.logoCTA.setScale(1)
+                this.text2CTA.setScale(1)
+                this.ctaTween = this.tweens.chain({tweens: [{targets: this.textCTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.textCTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.logoCTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.logoCTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.text2CTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.text2CTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.buttonCTA, scale: 1, duration: 200, ease: 'Sine.inOut'}, {targets: this.storesCTA, scale: 1, duration: 200, ease: 'Sine.inOut'} ], paused:true, delay:500, onComplete:()=>{this.tweens.add({targets: this.buttonCTA, scale: {value: this.buttonCTA.scaleX+0.1}, duration: 1000,  ease: 'sine.inOut', yoyo:true, loop:-1}); } });
+            }
+        }
+        else{
+            this.logo.setScale(0.6)
+            this.logo.x = width*0.3
+            this.logo.y = height*0.35
+
+            this.textGame.setScale(0.5)
+            this.textGame.x = width*0.3
+            this.textGame.y = height*0.65
+
+            this.blackCar.setScale(0.5)
+            this.blackCar.x = width*0.7
+            this.blackCar.y = height*0.5
+
+            this.car.setScale(0.5)
+            this.car.x = width*0.7
+            this.car.y = height*0.83
+
+            ///CTA
+            this.textCTA.setScale(0.5)
+            this.textCTA.x = width*2
+            this.textCTA.y = height*0.15
+
+            this.logoCTA.setScale(0.5)
+            this.logoCTA.x = width*2
+            this.logoCTA.y = height*0.36
+
+            this.text2CTA.setScale(0.5)
+            this.text2CTA.x = width*2
+            this.text2CTA.y = height*0.6
+
+            this.buttonCTA.x = width*0.5
+            this.buttonCTA.y = height*0.72
+
+            this.storesCTA.x = width*0.5
+            this.storesCTA.y = height*0.87
+
+            if(this.phase == 0){
+                if(this.carTween)this.carTween.remove()    
+                this.carTween = this.tweens.add({targets: this.car, y: window.innerHeight*0.2, duration: 1200, delay:500, repeat:-1, yoyo:true, ease: 'sine.inOut', 
+                    onUpdate: ()=>{
+                        if(this.car.y < window.innerHeight*0.5){
+                            if(this.car.frame.name != 'grey.png'){
+                                this.car.setFrame('grey.png')
+                            }
+                        }
+                        else if(this.car.y > window.innerHeight*0.55){
+                            if(this.car.frame.name != 'green.png'){
+                                this.car.setFrame('green.png')
+                            }
+                        }   
+                }}); 
+
+                this.ctaTween = this.tweens.chain({tweens: [{targets: this.textCTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.textCTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.logoCTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.logoCTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.text2CTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.text2CTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.buttonCTA, scale: 0.55, duration: 200, ease: 'Sine.inOut'}, {targets: this.storesCTA, scale: 0.55, duration: 200, ease: 'Sine.inOut'} ], paused:true, delay:500, onComplete:()=>{this.tweens.add({targets: this.buttonCTA, scale: {value: this.buttonCTA.scaleX+0.1}, duration: 1000,  ease: 'sine.inOut', yoyo:true, loop:-1}); } });
+            }
+            else if(this.phase == 3){
+                this.textCTA.setScale(0.5)
+                this.textCTA.x = width*0.5
+                this.textCTA.y = height*0.15
+
+                this.logoCTA.setScale(0.5)
+                this.logoCTA.x = width*0.5
+                this.logoCTA.y = height*0.36
+
+                this.text2CTA.setScale(0.5)
+                this.text2CTA.x = width*0.5
+                this.text2CTA.y = height*0.6
+
+                this.buttonCTA.x = width*0.5
+                this.buttonCTA.y = height*0.72
+
+                this.storesCTA.x = width*0.5
+                this.storesCTA.y = height*0.87
+            }
+
+             if(height <= 512){
+                this.logo.setScale(0.4)
+                this.textGame.setScale(0.4)
+                this.blackCar.setScale(0.3)
+                this.car.setScale(0.3)
+                this.textCTA.setScale(0.3)
+                this.logoCTA.setScale(0.3)
+                this.text2CTA.setScale(0.3)
+                this.ctaTween = this.tweens.chain({tweens: [{targets: this.textCTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.textCTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.logoCTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.logoCTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.text2CTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.text2CTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.buttonCTA, scale: 0.35, duration: 200, ease: 'Sine.inOut'}, {targets: this.storesCTA, scale: 0.35, duration: 200, ease: 'Sine.inOut'} ], paused:true, delay:500, onComplete:()=>{this.tweens.add({targets: this.buttonCTA, scale: {value: this.buttonCTA.scaleX+0.1}, duration: 1000,  ease: 'sine.inOut', yoyo:true, loop:-1}); } });
+            }
+
+            if(this.sys.game.device.os && !this.sys.game.device.os.iPhone){
+                this.logo.setScale(0.8)
+                this.textGame.setScale(0.8)
+                this.blackCar.setScale(0.8)
+                this.car.setScale(0.8)
+                this.textCTA.setScale(1)
+                this.logoCTA.setScale(1)
+                this.text2CTA.setScale(1)
+                this.ctaTween = this.tweens.chain({tweens: [{targets: this.textCTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.textCTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.logoCTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.logoCTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.text2CTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.text2CTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.buttonCTA, scale: 1, duration: 200, ease: 'Sine.inOut'}, {targets: this.storesCTA, scale: 1, duration: 200, ease: 'Sine.inOut'} ], paused:true, delay:500, onComplete:()=>{this.tweens.add({targets: this.buttonCTA, scale: {value: this.buttonCTA.scaleX+0.1}, duration: 1000,  ease: 'sine.inOut', yoyo:true, loop:-1}); } });
+            }
         }
     }
 }
